@@ -1,7 +1,16 @@
 #!/bin/bash
 
+#
+# Kieker benchmark script
+#
+# Usage: benchmark.sh [execute|test]
+
 # configure base dir
 BASE_DIR=$(cd "$(dirname "$0")"; pwd)
+
+#
+# source functionality
+#
 
 if [ ! -d "${BASE_DIR}" ] ; then
 	echo "Base directory ${BASE_DIR} does not exist."
@@ -9,29 +18,59 @@ if [ ! -d "${BASE_DIR}" ] ; then
 fi
 
 # load configuration and common functions
-if [ -f "${BASE_DIR}/config" ] ; then
-	. "${BASE_DIR}/config"
+if [ -f "${BASE_DIR}/config.rc" ] ; then
+	source "${BASE_DIR}/config.rc"
 else
-	echo "Missing configuration: ${BASE_DIR}/config"
+	echo "Missing configuration: ${BASE_DIR}/config.rc"
 	exit 1
 fi
 
 if [ -f "${BASE_DIR}/../common-functions.sh" ] ; then
-	. "${BASE_DIR}/../common-functions.sh"
+	source "${BASE_DIR}/../common-functions.sh"
 else
-	echo "Missing configuration: ${BASE_DIR}/../common-functions.sh"
+	echo "Missing library: ${BASE_DIR}/../common-functions.sh"
 	exit 1
 fi
 
-if [ -f "${BASE_DIR}/common-functions" ] ; then
-	. "${BASE_DIR}/common-functions"
+if [ -f "${BASE_DIR}/functions.sh" ] ; then
+	source "${BASE_DIR}/functions.sh"
 else
-	echo "Missing configuration: ${BASE_DIR}/common-functions"
+	echo "Missing: ${BASE_DIR}/functions.sh"
+	exit 1
+fi
+if [ -f "${BASE_DIR}/labels.sh" ] ; then
+	source "${BASE_DIR}/labels.sh"
+else
+	echo "Missing file: ${BASE_DIR}/labels.sh"
 	exit 1
 fi
 
-getKiekerAgent
+#
+# check command line parameters
+#
+if [ "$1" == "" ] ; then
+	MODE="execute"
+else
+	if [ "$1" == "execute" ] ; then
+		MODE="execute"
+	else
+		mode="test"
+	fi
+	OPTION="$2"
+fi
 
+#
+# Setup
+#
+
+info "----------------------------------"
+info "Setup..."
+info "----------------------------------"
+
+# load agent
+getAgent
+
+# Find receiver and extract it
 RECEIVER_ARCHIVE="${BASE_DIR}/../../tools/receiver/build/distributions/receiver.tar"
 
 if [ -f "${RECEIVER_ARCHIVE}" ] ; then
@@ -44,44 +83,26 @@ fi
 PARENT=`dirname "${RESULTS_DIR}"`
 RECEIVER_BIN="${BASE_DIR}/receiver/bin/receiver"
 
-# check command line parameters
-if [ "$1" == "" ] ; then
-	MODE="execute"
-else
-	if [ "$1" == "execute" ] ; then
-		MODE="execute"
-	else
-		mode="test"
-	fi
-	OPTION="$2"
-fi
-
-# test input parameters and configuration
-#checkFile R-script "${RSCRIPT_PATH}"
 checkDirectory DATA_DIR "${DATA_DIR}" create
 checkDirectory result-base "${PARENT}"
 checkFile ApsectJ-Agent "${AGENT}"
 checkExecutable Receiver "${RECEIVER_BIN}"
-
-information "----------------------------------"
-information "Running benchmark..."
-information "----------------------------------"
+checkFile Labels "${BASE_DIR}/labels.sh"
+checkFile R-script "${RSCRIPT_PATH}"
+checkDirectory results-directory "${RESULTS_DIR}" recreate
+checkFile log "${DATA_DIR}/kieker.log" clean
+checkExecutable java "${JAVA_BIN}"
+checkExecutable moobench "${MOOBENCH_BIN}"
+checkFile aop-file "${AOP}"
 
 TIME=`expr ${METHOD_TIME} \* ${TOTAL_NUM_OF_CALLS} / 1000000000 \* 4 \* ${RECURSION_DEPTH} \* ${NUM_OF_LOOPS} + ${SLEEP_TIME} \* 4 \* ${NUM_OF_LOOPS}  \* ${RECURSION_DEPTH} + 50 \* ${TOTAL_NUM_OF_CALLS} / 1000000000 \* 4 \* ${RECURSION_DEPTH} \* ${NUM_OF_LOOPS} `
-information "Experiment will take circa ${TIME} seconds."
-
-information "Removing and recreating '${RESULTS_DIR}'"
-rm -rf "${RESULTS_DIR}" && mkdir -p "${RESULTS_DIR}"
-
-# Clear kieker.log and initialize logging
-rm -f "${DATA_DIR}/kieker.log"
-touch "${DATA_DIR}/kieker.log"
+info "Experiment will take circa ${TIME} seconds."
 
 # general server arguments
 JAVA_ARGS="-server"
 JAVA_ARGS="${JAVA_ARGS} -Xms1G -Xmx2G"
 
-LTW_ARGS="-javaagent:${AGENT} -Dorg.aspectj.weaver.showWeaveInfo=true -Daj.weaving.verbose=true -Dkieker.monitoring.skipDefaultAOPConfiguration=true -Dorg.aspectj.weaver.loadtime.configuration=${AOP}"
+LTW_ARGS="-javaagent:${AGENT} --illegal-access=permit -Dorg.aspectj.weaver.showWeaveInfo=true -Daj.weaving.verbose=true -Dkieker.monitoring.skipDefaultAOPConfiguration=true -Dorg.aspectj.weaver.loadtime.configuration=file://${AOP}"
 
 KIEKER_ARGS="-Dlog4j.configuration=log4j.cfg -Dkieker.monitoring.name=KIEKER-BENCHMARK -Dkieker.monitoring.adaptiveMonitoring.enabled=false -Dkieker.monitoring.periodicSensorsExecutorPoolSize=0"
 
@@ -92,15 +113,12 @@ declare -a RECEIVER
 # Title
 declare -a TITLE
 
-# Configurations
-source labels.sh
 WRITER_CONFIG[0]=""
 WRITER_CONFIG[1]="-Dkieker.monitoring.enabled=false -Dkieker.monitoring.writer=kieker.monitoring.writer.dump.DumpWriter"
 WRITER_CONFIG[2]="-Dkieker.monitoring.enabled=true -Dkieker.monitoring.writer=kieker.monitoring.writer.dump.DumpWriter"
 WRITER_CONFIG[3]="-Dkieker.monitoring.enabled=true -Dkieker.monitoring.writer=kieker.monitoring.writer.filesystem.FileWriter -Dkieker.monitoring.writer.filesystem.FileWriter.logStreamHandler=kieker.monitoring.writer.filesystem.TextLogStreamHandler -Dkieker.monitoring.writer.filesystem.FileWriter.customStoragePath=${DATA_DIR}/"
 WRITER_CONFIG[4]="-Dkieker.monitoring.enabled=true -Dkieker.monitoring.writer=kieker.monitoring.writer.filesystem.FileWriter -Dkieker.monitoring.writer.filesystem.FileWriter.logStreamHandler=kieker.monitoring.writer.filesystem.BinaryLogStreamHandler -Dkieker.monitoring.writer.filesystem.FileWriter.bufferSize=8192 -Dkieker.monitoring.writer.filesystem.FileWriter.customStoragePath=${DATA_DIR}/"
 WRITER_CONFIG[5]="-Dkieker.monitoring.writer=kieker.monitoring.writer.tcp.SingleSocketTcpWriter -Dkieker.monitoring.writer.tcp.SingleSocketTcpWriter.port=2345"
-#RECEIVER[5]="${BASE_DIR}/collector-2.0/bin/collector -p 2345"
 RECEIVER[5]="${RECEIVER_BIN} 2345"
 
 ## Write configuration
@@ -118,107 +136,35 @@ METHOD_TIME=${METHOD_TIME}
 RECURSION_DEPTH=${RECURSION_DEPTH}
 EOF
 
+info "Ok"
+
 sync
 
-#################################
-# function: execute an experiment
+
 #
-# $1 = i iterator
-# $2 = j iterator
-# $3 = k iterator
-# $4 = title
-# $5 = writer parameters
-function execute-experiment() {
-    loop="$1"
-    recursion="$2"
-    index="$3"
-    title="$4"
-    kieker_parameters="$5"
+# Run benchmark
+#
 
-    information " # recursion=${recursion} loop=${loop} writer=${index} ${title}"
-    echo " # ${loop}.${recursion}.${index} ${title}" >> "${DATA_DIR}/kieker.log"
+info "----------------------------------"
+info "Running benchmark..."
+info "----------------------------------"
 
-    if [  "${kieker_parameters}" = "" ] ; then
-       BENCHMARK_OPTS="${JAVA_ARGS}"
-    else
-       BENCHMARK_OPTS="${JAVA_ARGS} ${LTW_ARGS} ${KIEKER_ARGS} ${kieker_parameters}"
-    fi
-
-    echo "Run options: ${BENCHMARK_OPTS} -jar MooBench.jar"
-
-    ${JAVA_BIN} ${BENCHMARK_OPTS} -jar MooBench.jar \
-	--application moobench.application.MonitoredClassSimple \
-        --output-filename "${RAWFN}-${loop}-${recursion}-${index}.csv" \
-        --total-calls "${TOTAL_NUM_OF_CALLS}" \
-        --method-time "${METHOD_TIME}" \
-        --total-threads 1 \
-        --recursion-depth "${recursion}" &> "${RESULTS_DIR}/output_${loop}_${RECURSION_DEPTH}_${index}.txt"
-
-    rm -rf "${DATA_DIR}"/kieker-*
-
-    [ -f "${DATA_DIR}/hotspot.log" ] && mv "${DATA_DIR}/hotspot.log" "${RESULTS_DIR}/hotspot-${loop}-${recursion}-${index}.log"
-    echo >> "${DATA_DIR}/kieker.log"
-    echo >> "${DATA_DIR}/kieker.log"
-    sync
-    sleep "${SLEEP_TIME}"
-}
-
-function execute-benchmark-body() {
-  index="$1"
-  loop="$2"
-  recursion="$3"
-  if [[ "${RECEIVER[$index]}" ]] ; then
-     echo "receiver ${RECEIVER[$index]}"
-     ${RECEIVER[$index]} >> "${DATA_DIR}/kieker.receiver-${i}-${index}.log" &
-     RECEIVER_PID=$!
-     echo "PID $RECEIVER_PID"
-  fi
-
-  execute-experiment "$loop" "$recursion" "$index" "${TITLE[$index]}" "${WRITER_CONFIG[$index]}"
-
-  if [[ "${RECEIVER_PID}" ]] ; then
-     kill -TERM "${RECEIVER_PID}"
-     unset RECEIVER_PID
-  fi
-}
-
-## Execute Benchmark
-function execute-benchmark() {
-  for ((loop=1;loop<="${NUM_OF_LOOPS}";loop+=1)); do
-    recursion="${RECURSION_DEPTH}"
-
-    information "## Starting iteration ${loop}/${NUM_OF_LOOPS}"
-    echo "## Starting iteration ${loop}/${NUM_OF_LOOPS}" >> "${DATA_DIR}/kieker.log"
-
-    for ((index=0;index<${#WRITER_CONFIG[@]};index+=1)); do
-      execute-benchmark-body $index $loop $recursion
-    done
-
-    printIntermediaryResults
-  done
-
-  mv "${DATA_DIR}/kieker.log" "${RESULTS_DIR}/kieker.log"
-  [ -f "${RESULTS_DIR}/hotspot-1-${RECURSION_DEPTH}-1.log" ] && grep "<task " "${RESULTS_DIR}"/hotspot-*.log > "${RESULTS_DIR}/log.log"
-  [ -f "${DATA_DIR}/errorlog.txt" ] && mv "${DATA_DIR}/errorlog.txt" "${RESULTS_DIR}"
-}
-
-## Execute benchmark
 if [ "$MODE" == "execute" ] ; then
    if [ "$OPTION" == "" ] ; then
-     execute-benchmark
+     executeBenchmark
    else
-     execute-benchmark-body $OPTION 1 1
+     executeBenchmarkBody $OPTION 1 1
    fi
 
    # Create R labels
    LABELS=$(createRLabels)
-   run-r
+   runR
 
-   cleanup-results
+   cleanupResults
 else
-   execute-benchmark-body $OPTION 1 1
+   executeBenchmarkBody $OPTION 1 1
 fi
 
-information "Done."
+info "Done."
 
 # end
